# Autonomous-Solar-Panels-Cleaning-Robot

./: .gitignore  frames_2025-08-10_19.21.36.gv  frames_2025-09-02_13.28.08.gv  tatus
install/: local_setup.sh  setup.sh
install/backported_bt_navigator/lib/backported_bt_navigator/: bt_navigator
install/backported_bt_navigator/share/backported_bt_navigator/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/fields2cover/cmake/fields2cover/: Fields2CoverConfigVersion.cmake
install/fields2cover/cmake/matplotlib_cpp/: matplotlib_cppConfig.cmake  matplotlib_cppTargets.cmake
install/fields2cover/lib/pkgconfig/: tinyxml2.pc
install/fields2cover/share/fields2cover/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/opennav_coverage/lib/opennav_coverage/: opennav_coverage
install/opennav_coverage/share/opennav_coverage/: local_setup.dsv  package.bash  (+4 more)
log/: latest_build
src/: behavior_trees.drawio  localization_pipeline.drawio
src/opennav_coverage/opennav_coverage_demo/: package.xml  setup.py
src/opennav_coverage/opennav_coverage_msgs/: CMakeLists.txt
src/opennav_coverage/opennav_coverage_navigator/: CMakeLists.txt
src/psolar_bringup/: CMakeLists.txt  package.xml
src/psolar_bringup/launch/: psolar.launch.py
src/psolar_bringup/psolar_bringup/: battery_simulation.py
src/psolar_bringup/rviz/: opennav_rviz.rviz
src/psolar_decision_making/: CMakeLists.txt  package.xml
src/psolar_decision_making/behavior_trees/: mission_tree.xml
src/psolar_decision_making/config/: panels_fields.yaml  panels_to_clean.yaml
src/psolar_decision_making/include/psolar_decision_making/: battery_low_node.hpp  clean_field_node.hpp  undock_node.hpp  which_field_node.hpp  which_goal_node.hpp
src/psolar_decision_making/src/: battery_low_node.cpp  clean_field_node.cpp  dock_if_low_battery.cpp  dock_node.cpp  lifecycle_switcher.cpp  mission_bt.cpp  navigate_to_goal_node.cpp  panel_publisher.cpp  planner_node.cpp  pop_field_node.cpp  undock_node.cpp  which_field_node.cpp  which_goal_node.cpp
src/psolar_docking/: CMakeLists.txt  package.xml
src/psolar_docking/config/: dock_database.yaml
src/psolar_docking/launch/: apriltag_dock_pose_publisher.launch.py
src/psolar_docking/src/: detected_dock_pose_publisher.cpp
src/psolar_gazebo/: CMakeLists.txt
src/psolar_gazebo/launch/: spawn_turtlebot3.launch.py
src/psolar_gazebo/params/: turtlebot3_waffle_bridge.yaml
src/psolar_gazebo/src/: turtlebot3_drive.cpp
src/psolar_gazebo/urdf/: turtlebot3_waffle_pi.urdf
src/psolar_gazebo/worlds/: empty_world.world  solar_panel_model.xml
src/psolar_localization/: CMakeLists.txt
src/psolar_localization/config/: global_ekf_params.yaml  global_ekf_params_2d.yaml  global_ekf_params_slope.yaml  local_ekf_params.yaml  local_ekf_params_2d.yaml  local_ekf_params_3d.yaml  local_ekf_params_slope.yaml  navsat_params_slope.yaml  twist_mux.yaml  which_cmd.yaml
src/psolar_localization/include/psolar_localization/: corrected_odometry_publisher.hpp
src/psolar_localization/launch/: dual_ekf_navsat.launch.py  localization_2d.launch.py  localization_3d.launch.py  localization_on_slope.launch.py
src/psolar_localization/src/: cleaning_launcher.cpp  corrected_odometry_publisher.cpp  gps_tilted_publisher.cpp  imu_frame_correction.cpp  odom_tilted_publisher.cpp  tilted_frames_publisher.cpp
src/psolar_navigation/: CMakeLists.txt  coverage_planner_plugin.xml  package.xml
src/psolar_navigation/config/: custom_cpp_params.yaml  nav_params.yaml
src/psolar_navigation/include/psolar_navigation/: coverage_path_planner.hpp
src/psolar_navigation/launch/: complete_coverage.launch.py  custom_cpp.launch.py  navigate_between_panels.launch.py
src/psolar_navigation/maps/: cleaning_5x5.yaml
src/psolar_navigation/scripts/: lifecycle_manager.sh
src/psolar_navigation/src/: coverage_path_planner.cpp
src/psolar_path_planning/: CMakeLists.txt
src/solbot_bringup/: CMakeLists.txt  package.xml
src/solbot_bringup/launch/: solbot.launch.py
src/solbot_bringup/rviz/: openav_rviz.rviz
src/solbot_bringup/solbot_bringup/: battery_simulation.py
src/solbot_decision_making/: CMakeLists.txt  package.xml
src/solbot_decision_making/include/solbot_decision_making/: dock_if_low_battery_node.hpp  dock_node.hpp  navigate_to_field._node.hpp  navigate_to_goal_node.hpp  planner_node.hpp  pop_field_node.hpp  undock_node.hpp
src/solbot_decision_making/src/: battery_low_node.cpp  clean_field_node.cpp  dock_if_low_battery.cpp  dock_node.cpp  mission_bt.cpp  navigate_to_goal_node.cpp  panel_publisher.cpp  planner_node.cpp  pop_field_node.cpp  undock_node.cpp  which_field_node.cpp  which_goal_node.cpp
src/solbot_docking/: CMakeLists.txt  package.xml
src/solbot_docking/config/: dock_database.yaml
src/solbot_docking/launch/: apriltag_dock_pose_publisher.launch.py
src/solbot_docking/src/: detected_dock_pose_publisher.cpp
src/solbot_gazebo/: CMakeLists.txt  package.xml
src/solbot_gazebo/launch/: empty_world.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  turtlebot3_world.launch.py
src/solbot_gazebo/src/: turtlebot3_drive.cpp
src/solbot_gazebo/urdf/: turtlebot3_waffle.urdf
src/solbot_gazebo/worlds/: empty_world.world  solar_panel_model.xml
src/solbot_localization/: CMakeLists.txt  package.xml
src/solbot_localization/config/: global_ekf_params_2d.yaml  global_ekf_params_3d.yaml  local_ekf_params_2d.yaml  local_ekf_params_3d.yaml  twist_mux.yaml
src/solbot_localization/launch/: localization_2d.launch.py  localization_3d.launch.py
src/solbot_navigation/: CMakeLists.txt  coverage_planner_plugin.xml  package.xml
src/solbot_navigation/behavior_tree/: coverage_navigation.xml
src/solbot_navigation/config/: coverage_params.yaml  custom_cpp_params.yaml  nav_params.yaml
src/solbot_navigation/include/solbot_navigation/: coverage_path_planner.hpp
src/solbot_navigation/launch/: complete_coverage.launch.py  custom_cpp.launch.py  navigate_between_panels.launch.py
src/solbot_navigation/src/: coverage_path_planner.cpp
(+249 files in other folders)
