<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>solbot_decision_making</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bouabdalla.manel@gmail.com">manel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opennav_coverage_msgs</depend>
  <depend>opennav_docking_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>sensor_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
